# parallel_tasker

./: Cargo.toml  LICENSE  README.md
benches/: micro_jobs.rs
src/: collector.rs  errors.rs  for_each.rs  for_each_mut.rs  iterator.rs  lib.rs  main.rs  map.rs  parallel_pipe.rs  parallel_task.rs  prelude.rs  task_queue.rs  utils.rs  worker_thread.rs
src/accessors/: limit_queue.rs  mod.rs  read_accessor.rs
src/iterators/: fetch.rs  fetchdirect.rs  implementations.rs  iterator.rs  mod.rs  parallel_collection.rs  prelude.rs  queued copy.rs  queued.rs
src/push_workers/: mod.rs  priorisation.rs  thread_manager.rs  thread_runner.rs  worker_controller.rs  worker_thread.rs
tests/: all_types_for_vec.rs  comparison.rs  hashmaptest.rs  micro_jobs.rs  non_std_jobs.rs  queue_contention.rs  range_test.rs  simple_test.rs  stress_test.rs  string_test.rs
