[package]
name = "parallel_task"
version = "0.1.0"
edition = "2024"
authors = ["Jayanth Ravindran <jayanth.ravindran@gmail.com>"]
description = "A simple data parallelism library for Rust"
license = "MIT"
repository = "https://github.com/jravz/parallel_tasker"
keywords = ["concurrency", "cpu bound", "data parallelism"]

[dependencies]
thiserror = "2.0.16"

[dev-dependencies]
rand = "0.9.2"
rayon = "1.11.0"
tokio = {version = "1.4.3", features = ["time"]}
sysinfo = "0.33.1"
