[package]
name = "parallel_task"
version = "0.4.0"
edition = "2021"
authors = ["Jayanth Ravindran <jayanth.ravindran@gmail.com>"]
description = "A fast data parallelism library for Rust"
license = "MIT"
repository = "https://github.com/jravz/parallel_tasker"
keywords = ["concurrency", "cpu", "parallelism", "thread", "multi-thread"]

[dependencies]
statrs = "0.18.0"
thiserror = "2.0.16"

[dev-dependencies]
rand = "0.9.2"
rayon = "1.11.0"
sysinfo = "0.33.1"
criterion = "0.4"

[[bench]]
name = "bench_micro_jobs"
path = "benches/micro_jobs.rs"
harness = false
